# Luxoft_Refactoring

./: README.md
ChessFigure/: ChessFigure.cpp  ChessFigure.h
Monopoly/: CMakeLists.txt  Monolopy.cpp  Monolopy.h  test.cpp
PolishNotation/: CMakeLists.txt  PolishNotation.hpp  tests.cpp
TicTacToe/: XO.cpp
XO/: XO.cpp
